[gd_scene load_steps=6 format=3 uid="uid://cgmwv6nfe2e7k"]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_hwldt"]
[ext_resource type="FontFile" uid="uid://c4x42sd2xeuos" path="res://Hunger Games.ttf" id="1_ltsby"]
[ext_resource type="AudioStream" uid="uid://b8rrmpb8sll77" path="res://sounds/effects/hover.mp3" id="3_jolpf"]
[ext_resource type="AudioStream" uid="uid://d3vl22rp4syu" path="res://sounds/effects/click.mp3" id="4_18dac"]

[sub_resource type="LabelSettings" id="LabelSettings_btjg4"]
font = ExtResource("1_ltsby")
font_size = 100
font_color = Color(1, 1, 0, 1)

[node name="game over screen" type="Control"]
process_mode = 3
top_level = true
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwldt")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 800.0
offset_bottom = 256.0
text = "DEATH"
label_settings = SubResource("LabelSettings_btjg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart" type="Button" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 256.0
offset_right = 672.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("1_ltsby")
theme_override_font_sizes/font_size = 32
text = "Try again"

[node name="main menu" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 336.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("1_ltsby")
theme_override_font_sizes/font_size = 32
text = "menu"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jolpf")
volume_db = -5.0
pitch_scale = 1.5

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_18dac")
volume_db = -5.0
pitch_scale = 1.2

[connection signal="mouse_entered" from="restart" to="." method="_hover"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="main menu" to="." method="_hover"]
[connection signal="pressed" from="main menu" to="." method="_on_main_menu_pressed"]
