[gd_scene load_steps=6 format=3 uid="uid://xxej4b340q6i"]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_rfgb8"]
[ext_resource type="FontFile" uid="uid://c4x42sd2xeuos" path="res://Hunger Games.ttf" id="2_4cwme"]
[ext_resource type="AudioStream" uid="uid://b8rrmpb8sll77" path="res://sounds/effects/hover.mp3" id="3_3kwr7"]
[ext_resource type="AudioStream" uid="uid://d3vl22rp4syu" path="res://sounds/effects/click.mp3" id="4_yrf46"]

[sub_resource type="LabelSettings" id="LabelSettings_btjg4"]
font = ExtResource("2_4cwme")
font_size = 100
font_color = Color(1, 1, 0, 1)

[node name="game won screen" type="Control"]
process_mode = 3
top_level = true
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfgb8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 800.0
offset_bottom = 256.0
text = "victory"
label_settings = SubResource("LabelSettings_btjg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="next lvl" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 336.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("2_4cwme")
theme_override_font_sizes/font_size = 32
text = "next"

[node name="main menu" type="Button" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 256.0
offset_right = 672.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("2_4cwme")
theme_override_font_sizes/font_size = 32
text = "menu"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3kwr7")
volume_db = -5.0
pitch_scale = 1.5

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yrf46")
volume_db = -5.0
pitch_scale = 1.2

[connection signal="mouse_entered" from="next lvl" to="." method="_hover"]
[connection signal="pressed" from="next lvl" to="." method="_on_next_lvl_pressed"]
[connection signal="mouse_entered" from="main menu" to="." method="_hover"]
[connection signal="pressed" from="main menu" to="." method="_on_main_menu_pressed"]
